--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <title>Heritage Day</title>
 </head>
 <body>
-<h1>Looking forward to heritge day!</h1>
+<h1>Looking forward to heritage day!</h1>
 </body>
 </html>
 
